+ a lot of refactoring + added an experimental feature ErrorVelocityRate + caught a null pointer exception int the StopTree class + added some analyze tools to analyze gpx data as well as for training data of the classifiers + attempt to make a local maven repository for 3rd party libraries in the folder "LibFolde". Needs to be checked whether this works or not.