@@ -16,8 +16,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <all.clusters>${project.build.directory}/${brandingToken}</all.clusters>
-        <netbeans.run.params.ide/>
-        <netbeans.run.params>${netbeans.run.params.ide} -J-Xmx1024m</netbeans.run.params>
+        <netbeans.run.params.ide>  </netbeans.run.params.ide>
+        <!-- -J-javaagent:C:/Users/Serdar/Documents/plumbr-all-2.1.2a/plumbr/plumbr.jar  -->
+        <netbeans.run.params>${netbeans.run.params.ide} -J-XX:+UseConcMarkSweepGC -J-XX:+CMSClassUnloadingEnabled -J-XX:+CMSPermGenSweepingEnabled -J-client -J-Xss2m -J-Xms32m -J-XX:PermSize=32m -J-Xmx4096m -J-Dapple.laf.useScreenMenuBar=true -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.dpiaware=true -J-Dsun.zip.disableMemoryMapping=true -J-Dsun.awt.disableMixing=true </netbeans.run.params>
     </properties>
 
     <dependencies>
@@ -330,6 +331,7 @@
                     <systemPropertyVariables>
                         <all.clusters>${all.clusters}</all.clusters>
                         <branding.token>${brandingToken}</branding.token>
+
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
